# ChangeLog for dev-libs/libburn
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libburn/ChangeLog,v 1.149 2013/06/24 05:10:10 ago Exp $

  24 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.3.0_p01.ebuild:
  Stable for ppc, wrt bug #472596

  20 Jun 2013; Daniel Pielmeier <billie@gentoo.org> libburn-1.3.0_p01.ebuild:
  Add additional docs. Avoid using cd for doc installation.

  18 Jun 2013; Chema Alonso <nimiux@gentoo.org> libburn-1.3.0_p01.ebuild:
  Stable for amd64 wrt bug #472596

  11 Jun 2013; Markus Meier <maekke@gentoo.org> libburn-1.3.0_p01.ebuild:
  arm stable, bug #472596

  09 Jun 2013; Jeroen Roovers <jer@gentoo.org> libburn-1.3.0_p01.ebuild:
  Stable for HPPA (bug #472596).

  07 Jun 2013; Daniel Pielmeier <billie@gentoo.org> -libburn-1.2.4.ebuild,
  -libburn-1.3.0.ebuild:
  Remove old.

*libburn-1.3.0_p01 (07 Jun 2013)

  07 Jun 2013; Daniel Pielmeier <billie@gentoo.org> +libburn-1.3.0_p01.ebuild:
  Version bump.

*libburn-1.3.0 (18 May 2013)

  18 May 2013; Daniel Pielmeier <billie@gentoo.org> +libburn-1.3.0.ebuild:
  Version bump.

  26 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.2.8.ebuild:
  Stable for sparc, wrt bug #461100

  22 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.2.8.ebuild:
  Stable for ppc, wrt bug #461100

  22 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.2.8.ebuild:
  Stable for ia64, wrt bug #461100

  18 Apr 2013; Jeroen Roovers <jer@gentoo.org> libburn-1.2.8.ebuild:
  Stable for HPPA (bug #461100).

  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.2.8.ebuild:
  Stable for alpha, wrt bug #461100

  16 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.2.8.ebuild:
  Stable for ppc64, wrt bug #461100

  16 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.2.8.ebuild:
  Stable for arm, wrt bug #461100

  13 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.2.8.ebuild:
  Stable for x86, wrt bug #461100
