@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisofs/Attic/libisofs-1.3.0.ebuild,v 1.7 2013/06/24 05:10:20 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisofs/Attic/libisofs-1.3.0.ebuild,v 1.8 2013/06/25 10:19:20 ago Exp $
 
 EAPI=5
 
@@ -10,7 +10,7 @@ SRC_URI="http://files.libburnia-project.org/releases/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha amd64 arm hppa ~ia64 ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha amd64 arm hppa ~ia64 ppc ppc64 ~sparc ~x86"
 IUSE="acl debug static-libs verbose-debug xattr zlib"
 
 RDEPEND="acl? ( virtual/acl )
