@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libisofs
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisofs/ChangeLog,v 1.136 2013/06/24 05:10:20 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libisofs/ChangeLog,v 1.137 2013/06/25 10:19:20 ago Exp $
+
+  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libisofs-1.3.0.ebuild:
+  Stable for ppc64, wrt bug #472596
 
   24 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libisofs-1.3.0.ebuild:
   Stable for ppc, wrt bug #472596
