@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libburn
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libburn/ChangeLog,v 1.149 2013/06/24 05:10:10 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libburn/ChangeLog,v 1.150 2013/06/25 10:19:12 ago Exp $
+
+  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.3.0_p01.ebuild:
+  Stable for ppc64, wrt bug #472596
 
   24 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libburn-1.3.0_p01.ebuild:
   Stable for ppc, wrt bug #472596
